AMEN entity localStorage set

--- a/projects/amen/views/mapping/entities/index.html
+++ b/projects/amen/views/mapping/entities/index.html
@@ -54,26 +54,26 @@
             <form id="yale-medical-center-entities">
               <fieldset class="toggle checklist">
                 <!-- <legend>Entities</legend> -->
-                <label for="yale-medical-center-patient">Patient<input type="checkbox" id="yale-medical-center-patient" class="toggle" name="yale-medical-center-patient" title="Patient" value="Patient"></label>
-                <label for="yale-medical-center-provider">Provider<input type="checkbox" id="yale-medical-center-provider" class="toggle" name="yale-medical-center-provider" title="Provider" value="Provider"></label>
-                <label for="yale-medical-center-caregiver">Caregiver<input type="checkbox" id="yale-medical-center-caregiver" class="toggle" name="yale-medical-center-caregiver" title="Caregiver" value="Caregiver"></label>
-                <label for="yale-medical-center-location">Location<input type="checkbox" id="yale-medical-center-location" class="toggle" name="yale-medical-center-location" title="Location" value="Location"></label>
-                <label for="yale-medical-center-caregiver-assignment">Caregiver Assignment<input type="checkbox" id="yale-medical-center-caregiver-assignment" class="toggle" name="yale-medical-center-caregiver-assignment" title="Caregiver Assignment" value="Caregiver Assignment"></label>
-                <label for="yale-medical-center-patient-update">Patient Update<input type="checkbox" id="yale-medical-center-patient-update" class="toggle" name="yale-medical-center-patient-update" title="Patient Update" value="Patient Update"></label>
-                <label for="yale-medical-center-order-request">Order Request<input type="checkbox" id="yale-medical-center-order-request" class="toggle" name="yale-medical-center-order-request" title="Order Request" value="Order Request"></label>
-                <label for="yale-medical-center-lab-result">Lab Result<input type="checkbox" id="yale-medical-center-lab-result" class="toggle" name="yale-medical-center-lab-result" title="Lab Request" value="Lab Request"></label>
-                <label for="yale-medical-center-nurse-call">Nurse Call<input type="checkbox" id="yale-medical-center-nurse-call" class="toggle" name="yale-medical-center-nurse-call" title="Nurse Call" value="Nurse Call"></label>
-                <label for="yale-medical-center-patient-monitor">Patient Monitor<input type="checkbox" id="yale-medical-center-patient-monitor" class="toggle" name="yale-medical-center-patient-monitor" title="Patient Monitor" value="Patient Monitor"></label>
-                <label for="yale-medical-center-response">Response<input type="checkbox" id="yale-medical-center-response" class="toggle" name="yale-medical-center-response" title="Response" value="Response"></label>
-                <label for="yale-medical-center-availability">Availability<input type="checkbox" id="yale-medical-center-availability" class="toggle" name="yale-medical-center-availability" title="Availability" value="Availability"></label>
-                <label for="yale-medical-center-delivery">Delivery<input type="checkbox" id="yale-medical-center-delivery" class="toggle" name="yale-medical-center-delivery" title="Delivery" value="Delivery"></label>
-                <label for="yale-medical-center-presence">Presence<input type="checkbox" id="yale-medical-center-presence" class="toggle" name="yale-medical-center-presence" title="Presence" value="Presence"></label>
+                <label for="yale-medical-center-patient-entity">Patient<input type="checkbox" id="yale-medical-center-patient-entity" class="toggle" name="yale-medical-center-patient-entity" title="Patient" value="Patient"></label>
+                <label for="yale-medical-center-provider-entity">Provider<input type="checkbox" id="yale-medical-center-provider-entity" class="toggle" name="yale-medical-center-provider-entity" title="Provider" value="Provider"></label>
+                <label for="yale-medical-center-caregiver-entity">Caregiver<input type="checkbox" id="yale-medical-center-caregiver-entity" class="toggle" name="yale-medical-center-caregiver-entity" title="Caregiver" value="Caregiver"></label>
+                <label for="yale-medical-center-location-entity">Location<input type="checkbox" id="yale-medical-center-location-entity" class="toggle" name="yale-medical-center-location-entity" title="Location" value="Location"></label>
+                <label for="yale-medical-center-caregiver-assignment-entity">Caregiver Assignment<input type="checkbox" id="yale-medical-center-caregiver-assignment-entity" class="toggle" name="yale-medical-center-caregiver-assignment-entity" title="Caregiver Assignment" value="Caregiver Assignment"></label>
+                <label for="yale-medical-center-patient-update-entity">Patient Update<input type="checkbox" id="yale-medical-center-patient-update-entity" class="toggle" name="yale-medical-center-patient-update-entity" title="Patient Update" value="Patient Update"></label>
+                <label for="yale-medical-center-order-request-entity">Order Request<input type="checkbox" id="yale-medical-center-order-request-entity" class="toggle" name="yale-medical-center-order-request-entity" title="Order Request" value="Order Request"></label>
+                <label for="yale-medical-center-lab-result-entity">Lab Result<input type="checkbox" id="yale-medical-center-lab-result-entity" class="toggle" name="yale-medical-center-lab-result-entity" title="Lab Result" value="Lab Result"></label>
+                <label for="yale-medical-center-nurse-call-entity">Nurse Call<input type="checkbox" id="yale-medical-center-nurse-call-entity" class="toggle" name="yale-medical-center-nurse-call-entity" title="Nurse Call" value="Nurse Call"></label>
+                <label for="yale-medical-center-patient-monitor-entity">Patient Monitor<input type="checkbox" id="yale-medical-center-patient-monitor-entity" class="toggle" name="yale-medical-center-patient-monitor-entity" title="Patient Monitor" value="Patient Monitor"></label>
+                <label for="yale-medical-center-response-entity">Response<input type="checkbox" id="yale-medical-center-response-entity" class="toggle" name="yale-medical-center-response-entity" title="Response" value="Response"></label>
+                <label for="yale-medical-center-availability-entity">Availability<input type="checkbox" id="yale-medical-center-availability-entity" class="toggle" name="yale-medical-center-availability-entity" title="Availability" value="Availability"></label>
+                <label for="yale-medical-center-delivery-entity">Delivery<input type="checkbox" id="yale-medical-center-delivery-entity" class="toggle" name="yale-medical-center-delivery-entity" title="Delivery" value="Delivery"></label>
+                <label for="yale-medical-center-presence-entity">Presence<input type="checkbox" id="yale-medical-center-presence-entity" class="toggle" name="yale-medical-center-presence-entity" title="Presence" value="Presence"></label>
               </fieldset>
             </form>
             <div class="button-group right">
               <a href="views/mapping/index.html" class="button tertiary">Back to Mapping</a>
               <button class="secondary">Cancel</button>
-              <button class="primary">Save</button>
+              <a href="views/mapping/index.html" class="button primary">Save</a>
             </div>
           </div>
         </div>
