--- a/projects/amen/views/mapping/index.html
+++ b/projects/amen/views/mapping/index.html
@@ -252,6 +252,21 @@ NTE|6||mechanical heart valves.|
     var myElement = document.querySelector("header");
     var headroom = new Headroom(myElement);
     headroom.init();
+    // SHOWING ACTIVE ENTITY MAPPING
+    window.addEventListener("DOMContentLoaded", function () {if (localStorage.getItem("yale-medical-center-patient-entity") === "true") {$("#yale-medical-center-patient-entity").toggleClass(" show");}else {localStorage.setItem("yale-medical-center-patient-entity", false);}});
+    window.addEventListener("DOMContentLoaded", function () {if (localStorage.getItem("yale-medical-center-provider-entity") === "true") {$("#yale-medical-center-provider-entity").toggleClass(" show");}else {localStorage.setItem("yale-medical-center-provider-entity", false);}});
+    window.addEventListener("DOMContentLoaded", function () {if (localStorage.getItem("yale-medical-center-caregiver-entity") === "true") {$("#yale-medical-center-caregiver-entity").toggleClass(" show");}else {localStorage.setItem("yale-medical-center-caregiver-entity", false);}});
+    window.addEventListener("DOMContentLoaded", function () {if (localStorage.getItem("yale-medical-center-location-entity") === "true") {$("#yale-medical-center-location-entity").toggleClass(" show");}else {localStorage.setItem("yale-medical-center-location-entity", false);}});
+    window.addEventListener("DOMContentLoaded", function () {if (localStorage.getItem("yale-medical-center-caregiver-assignment-entity") === "true") {$("#yale-medical-center-caregiver-assignment-entity").toggleClass(" show");}else {localStorage.setItem("yale-medical-center-caregiver-assignment-entity", false);}});
+    window.addEventListener("DOMContentLoaded", function () {if (localStorage.getItem("yale-medical-center-patient-update-entity") === "true") {$("#yale-medical-center-patient-update-entity").toggleClass(" show");}else {localStorage.setItem("yale-medical-center-patient-update-entity", false);}});
+    window.addEventListener("DOMContentLoaded", function () {if (localStorage.getItem("yale-medical-center-order-request-entity") === "true") {$("#yale-medical-center-order-request-entity").toggleClass(" show");}else {localStorage.setItem("yale-medical-center-order-request-entity", false);}});
+    window.addEventListener("DOMContentLoaded", function () {if (localStorage.getItem("yale-medical-center-lab-result-entity") === "true") {$("#yale-medical-center-lab-result-entity").toggleClass(" show");}else {localStorage.setItem("yale-medical-center-lab-result-entity", false);}});
+    window.addEventListener("DOMContentLoaded", function () {if (localStorage.getItem("yale-medical-center-nurse-call-entity") === "true") {$("#yale-medical-center-nurse-call-entity").toggleClass(" show");}else {localStorage.setItem("yale-medical-center-nurse-call-entity", false);}});
+    window.addEventListener("DOMContentLoaded", function () {if (localStorage.getItem("yale-medical-center-patient-monitor-entity") === "true") {$("#yale-medical-center-patient-monitor-entity").toggleClass(" show");}else {localStorage.setItem("yale-medical-center-patient-monitor-entity", false);}});
+    window.addEventListener("DOMContentLoaded", function () {if (localStorage.getItem("yale-medical-center-response-entity") === "true") {$("#yale-medical-center-response-entity").toggleClass(" show");}else {localStorage.setItem("yale-medical-center-response-entity", false);}});
+    window.addEventListener("DOMContentLoaded", function () {if (localStorage.getItem("yale-medical-center-availability-entity") === "true") {$("#yale-medical-center-availability-entity").toggleClass(" show");}else {localStorage.setItem("yale-medical-center-availability-entity", false);}});
+    window.addEventListener("DOMContentLoaded", function () {if (localStorage.getItem("yale-medical-center-delivery-entity") === "true") {$("#yale-medical-center-delivery-entity").toggleClass(" show");}else {localStorage.setItem("yale-medical-center-delivery-entity", false);}});
+    window.addEventListener("DOMContentLoaded", function () {if (localStorage.getItem("yale-medical-center-presence-entity") === "true") {$("#yale-medical-center-presence-entity").toggleClass(" show");}else {localStorage.setItem("yale-medical-center-presence-entity", false);}});
   </script>
 </body>
 
