--- a/projects/amen/views/mapping/index.html
+++ b/projects/amen/views/mapping/index.html
@@ -52,17 +52,35 @@
           <div id="yale-medical-center-patient-entity" class="card entity column-12">
             <h4>Patient<span class="utility"><a href="views/mapping/patient/index.html" class="button tertiary">Edit Fields</a></span></h4>
             <ul class="mapping">
-              <li>
+              <li class="show">
                 <span class="field">Field</span>
                 <span class="element">Element</span>
                 <span class="preview">Preview</span>
               </li>
+              <li id="yale-medical-center-patient-patient-id-field"><span class="field">Patient ID</span><span class="element"><code>PID.2</code></span><span class="preview">E00000329</span></li>
+              <li id="yale-medical-center-patient-mrn-field"><span class="field">MRN</span><span class="element"><code>PID.3</code></span><span class="preview">M000000350</span></li>
+              <li id="yale-medical-center-patient-encounter-visit-number-field"><span class="field">Encounter Visit number</span><span class="element"><code>PID</code></span><span class="preview"></span></li>
+              <li id="yale-medical-center-patient-first-name-field"><span class="field">First Name</span><span class="element"><code>PID.5.3</code></span><span class="preview">TOM</span></li>
+              <li id="yale-medical-center-patient-last-name-field"><span class="field">Last Name</span><span class="element"><code>PID.5.2</code></span><span class="preview">BLUEAPPLE</span></li>
+              <li id="yale-medical-center-patient-organization-field"><span class="field">Organization</span><span class="element"><code>PID.5.1</code></span><span class="preview"></span></li>
+              <li id="yale-medical-center-patient-date-of-birth-field"><span class="field">Date of Birth</span><span class="element"><code>PID.7</code></span><span class="preview"></span></li>
+              <li id="yale-medical-center-patient-gender-field"><span class="field">Gender</span><span class="element"><code>PID.8</code></span><span class="preview"></span></li>
+              <li id="yale-medical-center-patient-phone-number-field"><span class="field">Phone Number</span><span class="element"><code>PID.13</code></span><span class="preview"></span></li>
+              <li id="yale-medical-center-patient-email-field"><span class="field">Email</span><span class="element"><code>PID</code></span><span class="preview"></span></li>
+              <li id="yale-medical-center-patient-status-field"><span class="field">Status</span><span class="element"><code></code></span><span class="preview"></span></li>
+              <li id="yale-medical-center-patient-chief-complaint-field"><span class="field">Chief Complaint</span><span class="element"><code></code></span><span class="preview"></span></li>
+              <li id="yale-medical-center-patient-diagnosis-field"><span class="field">Diagnosis</span><span class="element"><code></code></span><span class="preview"></span></li>
+              <li id="yale-medical-center-patient-allergies-field"><span class="field">Allergies</span><span class="element"><code></code></span><span class="preview"></span></li>
+              <li id="yale-medical-center-patient-patient-class-field"><span class="field">Patient Class</span><span class="element"><code>PV[1].4</code></span><span class="preview"></span></li>
+              <li id="yale-medical-center-patient-attending-physician-field"><span class="field">Attending Physician</span><span class="element"><code>PV[1].7</code></span><span class="preview"></span></li>
+              <li id="yale-medical-center-patient-primary-care-physician-field"><span class="field">Primary Care Physician</span><span class="element"><code></code></span><span class="preview"></span></li>
+              <li id="yale-medical-center-patient-referring-physician-field"><span class="field">Referring Physician</span><span class="element"><code>PV[1].8</code></span><span class="preview"></span></li>
             </ul>
           </div>
           <div id="yale-medical-center-provider-entity" class="card entity column-12">
             <h4>Provider<span class="utility"><a href="views/mapping/provider/index.html" class="button tertiary">Edit Fields</a></span></h4>
             <ul class="mapping">
-              <li>
+              <li class="show">
                 <span class="field">Field</span>
                 <span class="element">Element</span>
                 <span class="preview">Preview</span>
@@ -72,7 +90,7 @@
           <div id="yale-medical-center-caregiver-entity" class="card entity column-12">
             <h4>Caregiver<span class="utility"><a href="views/mapping/caregiver/index.html" class="button tertiary">Edit Fields</a></span></h4>
             <ul class="mapping">
-              <li>
+              <li class="show">
                 <span class="field">Field</span>
                 <span class="element">Element</span>
                 <span class="preview">Preview</span>
@@ -82,7 +100,7 @@
           <div id="yale-medical-center-location-entity" class="card entity column-12">
             <h4>Location<span class="utility"><a href="views/mapping/location/index.html" class="button tertiary">Edit Fields</a></span></h4>
             <ul class="mapping">
-              <li>
+              <li class="show">
                 <span class="field">Field</span>
                 <span class="element">Element</span>
                 <span class="preview">Preview</span>
@@ -92,7 +110,7 @@
           <div id="yale-medical-center-caregiver-assignment-entity" class="card entity column-12">
             <h4>Caregiver Assignment<span class="utility"><a href="views/mapping/caregiver-assignment/index.html" class="button tertiary">Edit Fields</a></span></h4>
             <ul class="mapping">
-              <li>
+              <li class="show">
                 <span class="field">Field</span>
                 <span class="element">Element</span>
                 <span class="preview">Preview</span>
@@ -102,7 +120,7 @@
           <div id="yale-medical-center-patient-update-entity" class="card entity column-12">
             <h4>Patient Update<span class="utility"><a href="views/mapping/patient-update/index.html" class="button tertiary">Edit Fields</a></span></h4>
             <ul class="mapping">
-              <li>
+              <li class="show">
                 <span class="field">Field</span>
                 <span class="element">Element</span>
                 <span class="preview">Preview</span>
@@ -112,7 +130,7 @@
           <div id="yale-medical-center-order-request-entity" class="card entity column-12">
             <h4>Order Request<span class="utility"><a href="views/mapping/order-request/index.html" class="button tertiary">Edit Fields</a></span></h4>
             <ul class="mapping">
-              <li>
+              <li class="show">
                 <span class="field">Field</span>
                 <span class="element">Element</span>
                 <span class="preview">Preview</span>
@@ -122,7 +140,7 @@
           <div id="yale-medical-center-lab-result-entity" class="card entity column-12">
             <h4>Lab Result<span class="utility"><a href="views/mapping/lab-result/index.html" class="button tertiary">Edit Fields</a></span></h4>
             <ul class="mapping">
-              <li>
+              <li class="show">
                 <span class="field">Field</span>
                 <span class="element">Element</span>
                 <span class="preview">Preview</span>
@@ -132,7 +150,7 @@
           <div id="yale-medical-center-nurse-call-entity" class="card entity column-12">
             <h4>Nurse Call<span class="utility"><a href="views/mapping/nurse-call/index.html" class="button tertiary">Edit Fields</a></span></h4>
             <ul class="mapping">
-              <li>
+              <li class="show">
                 <span class="field">Field</span>
                 <span class="element">Element</span>
                 <span class="preview">Preview</span>
@@ -142,7 +160,7 @@
           <div id="yale-medical-center-patient-monitor-entity" class="card entity column-12">
             <h4>Patient Monitor<span class="utility"><a href="views/mapping/patient-monitor/index.html" class="button tertiary">Edit Fields</a></span></h4>
             <ul class="mapping">
-              <li>
+              <li class="show">
                 <span class="field">Field</span>
                 <span class="element">Element</span>
                 <span class="preview">Preview</span>
@@ -152,7 +170,7 @@
           <div id="yale-medical-center-response-entity" class="card entity column-12">
             <h4>Response<span class="utility"><a href="views/mapping/response/index.html" class="button tertiary">Edit Fields</a></span></h4>
             <ul class="mapping">
-              <li>
+              <li class="show">
                 <span class="field">Field</span>
                 <span class="element">Element</span>
                 <span class="preview">Preview</span>
@@ -162,7 +180,7 @@
           <div id="yale-medical-center-availability-entity" class="card entity column-12">
             <h4>Availability<span class="utility"><a href="views/mapping/availability/index.html" class="button tertiary">Edit Fields</a></span></h4>
             <ul class="mapping">
-              <li>
+              <li class="show">
                 <span class="field">Field</span>
                 <span class="element">Element</span>
                 <span class="preview">Preview</span>
@@ -172,7 +190,7 @@
           <div id="yale-medical-center-delivery-entity" class="card entity column-12">
             <h4>Delivery<span class="utility"><a href="views/mapping/delivery/index.html" class="button tertiary">Edit Fields</a></span></h4>
             <ul class="mapping">
-              <li>
+              <li class="show">
                 <span class="field">Field</span>
                 <span class="element">Element</span>
                 <span class="preview">Preview</span>
@@ -182,7 +200,7 @@
           <div id="yale-medical-center-presence-entity" class="card entity column-12">
             <h4>Presence<span class="utility"><a href="views/mapping/presence/index.html" class="button tertiary">Edit Fields</a></span></h4>
             <ul class="mapping">
-              <li>
+              <li class="show">
                 <span class="field">Field</span>
                 <span class="element">Element</span>
                 <span class="preview">Preview</span>
@@ -195,7 +213,7 @@
             <h2>Raw Data</h2>
             <pre>
 MSH|^~\&|LAB|NMC|||20201001091354-0400||ORU^R01|22064.1|D|2.3|
-PID|1|<em>E00000329</em>|<em>M000000350</em>||BLUEAPPLE^<em>TOM</em>||19711221|F||W|123 MAIN STREET^^SAINT ALBANS^VT^05478|||||S||V00000019513|
+PID|1|E00000329|<em>M000000350</em>||BLUEAPPLE^<em>TOM</em>||19711221|F||W|123 MAIN STREET^^SAINT ALBANS^VT^05478|||||S||V00000019513|
 PV1|1519|O|<em>ICU^101^A</em>|EL|||ZFINGJU^Fingergut^Judy^^^^MD|||||||PHY||||CLI|||||||||||||||||||||NMC||REG|||202010010910|
 OBR|1|1789^LAB|1789^LAB|PT^HEPARIN/INR^L|||202010010912|||||||202010010912||ZFINGJU^Zfingergut^Judy^^^^MD||||||||LAB|F||^^^^^R|BARNMI^Barnum^Michael^J.^^^MD|
 OBX|1|ST|PRO^<em>HEPARIN</em>^L|1|<em>12.0</em>|<em>SECONDS</em>|<em>9.6-11.2</em>|H||A^S|F|||202010010913|ML^MAIN LAB^L|
@@ -252,7 +270,7 @@ NTE|6||mechanical heart valves.|
     var myElement = document.querySelector("header");
     var headroom = new Headroom(myElement);
     headroom.init();
-    // SHOWING ACTIVE ENTITY MAPPING
+    // SHOW ACTIVE ENTITIES
     window.addEventListener("DOMContentLoaded", function () {if (localStorage.getItem("yale-medical-center-patient-entity") === "true") {$("#yale-medical-center-patient-entity").toggleClass(" show");}else {localStorage.setItem("yale-medical-center-patient-entity", false);}});
     window.addEventListener("DOMContentLoaded", function () {if (localStorage.getItem("yale-medical-center-provider-entity") === "true") {$("#yale-medical-center-provider-entity").toggleClass(" show");}else {localStorage.setItem("yale-medical-center-provider-entity", false);}});
     window.addEventListener("DOMContentLoaded", function () {if (localStorage.getItem("yale-medical-center-caregiver-entity") === "true") {$("#yale-medical-center-caregiver-entity").toggleClass(" show");}else {localStorage.setItem("yale-medical-center-caregiver-entity", false);}});
@@ -267,6 +285,25 @@ NTE|6||mechanical heart valves.|
     window.addEventListener("DOMContentLoaded", function () {if (localStorage.getItem("yale-medical-center-availability-entity") === "true") {$("#yale-medical-center-availability-entity").toggleClass(" show");}else {localStorage.setItem("yale-medical-center-availability-entity", false);}});
     window.addEventListener("DOMContentLoaded", function () {if (localStorage.getItem("yale-medical-center-delivery-entity") === "true") {$("#yale-medical-center-delivery-entity").toggleClass(" show");}else {localStorage.setItem("yale-medical-center-delivery-entity", false);}});
     window.addEventListener("DOMContentLoaded", function () {if (localStorage.getItem("yale-medical-center-presence-entity") === "true") {$("#yale-medical-center-presence-entity").toggleClass(" show");}else {localStorage.setItem("yale-medical-center-presence-entity", false);}});
+    // SHOW ACTIVE FIELDS
+    window.addEventListener("DOMContentLoaded", function () {if (localStorage.getItem("yale-medical-center-patient-patient-id-field") === "true") {$(".card ul.mapping li#yale-medical-center-patient-patient-id-field").toggleClass(" show");}else {localStorage.setItem("yale-medical-center-patient-patient-id-field", false);}});
+    window.addEventListener("DOMContentLoaded", function () {if (localStorage.getItem("yale-medical-center-patient-mrn-field") === "true") {$(".card ul.mapping li#yale-medical-center-patient-mrn-field").toggleClass(" show");}else {localStorage.setItem("yale-medical-center-patient-mrn-field", false);}});
+    window.addEventListener("DOMContentLoaded", function () {if (localStorage.getItem("yale-medical-center-patient-encounter-visit-number-field") === "true") {$(".card ul.mapping li#yale-medical-center-patient-encounter-visit-number-field").toggleClass(" show");}else {localStorage.setItem("yale-medical-center-patient-encounter-visit-number-field", false);}});
+    window.addEventListener("DOMContentLoaded", function () {if (localStorage.getItem("yale-medical-center-patient-first-name-field") === "true") {$(".card ul.mapping li#yale-medical-center-patient-first-name-field").toggleClass(" show");}else {localStorage.setItem("yale-medical-center-patient-first-name-field", false);}});
+    window.addEventListener("DOMContentLoaded", function () {if (localStorage.getItem("yale-medical-center-patient-last-name-field") === "true") {$(".card ul.mapping li#yale-medical-center-patient-last-name-field").toggleClass(" show");}else {localStorage.setItem("yale-medical-center-patient-last-name-field", false);}});
+    window.addEventListener("DOMContentLoaded", function () {if (localStorage.getItem("yale-medical-center-patient-organization-field") === "true") {$(".card ul.mapping li#yale-medical-center-patient-organization-field").toggleClass(" show");}else {localStorage.setItem("yale-medical-center-patient-organization-field", false);}});
+    window.addEventListener("DOMContentLoaded", function () {if (localStorage.getItem("yale-medical-center-patient-date-of-birth-field") === "true") {$(".card ul.mapping li#yale-medical-center-patient-date-of-birth-field").toggleClass(" show");}else {localStorage.setItem("yale-medical-center-patient-date-of-birth-field", false);}});
+    window.addEventListener("DOMContentLoaded", function () {if (localStorage.getItem("yale-medical-center-patient-gender-field") === "true") {$(".card ul.mapping li#yale-medical-center-patient-gender-field").toggleClass(" show");}else {localStorage.setItem("yale-medical-center-patient-gender-field", false);}});
+    window.addEventListener("DOMContentLoaded", function () {if (localStorage.getItem("yale-medical-center-patient-phone-number-field") === "true") {$(".card ul.mapping li#yale-medical-center-patient-phone-number-field").toggleClass(" show");}else {localStorage.setItem("yale-medical-center-patient-phone-number-field", false);}});
+    window.addEventListener("DOMContentLoaded", function () {if (localStorage.getItem("yale-medical-center-patient-email-field") === "true") {$(".card ul.mapping li#yale-medical-center-patient-email-field").toggleClass(" show");}else {localStorage.setItem("yale-medical-center-patient-email-field", false);}});
+    window.addEventListener("DOMContentLoaded", function () {if (localStorage.getItem("yale-medical-center-patient-status-field") === "true") {$(".card ul.mapping li#yale-medical-center-patient-status-field").toggleClass(" show");}else {localStorage.setItem("yale-medical-center-patient-status-field", false);}});
+    window.addEventListener("DOMContentLoaded", function () {if (localStorage.getItem("yale-medical-center-patient-chief-complaint-field") === "true") {$(".card ul.mapping li#yale-medical-center-patient-chief-complaint-field").toggleClass(" show");}else {localStorage.setItem("yale-medical-center-patient-chief-complaint-field", false);}});
+    window.addEventListener("DOMContentLoaded", function () {if (localStorage.getItem("yale-medical-center-patient-diagnosis-field") === "true") {$(".card ul.mapping li#yale-medical-center-patient-diagnosis-field").toggleClass(" show");}else {localStorage.setItem("yale-medical-center-patient-diagnosis-field", false);}});
+    window.addEventListener("DOMContentLoaded", function () {if (localStorage.getItem("yale-medical-center-patient-allergies-field") === "true") {$(".card ul.mapping li#yale-medical-center-patient-allergies-field").toggleClass(" show");}else {localStorage.setItem("yale-medical-center-patient-allergies-field", false);}});
+    window.addEventListener("DOMContentLoaded", function () {if (localStorage.getItem("yale-medical-center-patient-patient-class-field") === "true") {$(".card ul.mapping li#yale-medical-center-patient-patient-class-field").toggleClass(" show");}else {localStorage.setItem("yale-medical-center-patient-patient-class-field", false);}});
+    window.addEventListener("DOMContentLoaded", function () {if (localStorage.getItem("yale-medical-center-patient-attending-physician-field") === "true") {$(".card ul.mapping li#yale-medical-center-patient-attending-physician-field").toggleClass(" show");}else {localStorage.setItem("yale-medical-center-patient-attending-physician-field", false);}});
+    window.addEventListener("DOMContentLoaded", function () {if (localStorage.getItem("yale-medical-center-patient-primary-care-physician-field") === "true") {$(".card ul.mapping li#yale-medical-center-patient-primary-care-physician-field").toggleClass(" show");}else {localStorage.setItem("yale-medical-center-patient-primary-care-physician-field", false);}});
+    window.addEventListener("DOMContentLoaded", function () {if (localStorage.getItem("yale-medical-center-patient-referring-physician-field") === "true") {$(".card ul.mapping li#yale-medical-center-patient-referring-physician-field").toggleClass(" show");}else {localStorage.setItem("yale-medical-center-patient-referring-physician-field", false);}});
   </script>
 </body>
 
