--- a/projects/amen/style/amen.css
+++ b/projects/amen/style/amen.css
@@ -1956,6 +1956,18 @@ h4 span.utility .button.tertiary {
   opacity: 1;
 }
 
+.card ul.mapping li {
+  display: none;
+  max-height: 0;
+  opacity: 0;
+  transition: all 0.25s ease 0s;
+}
+.card ul.mapping li.show {
+  display: flex;
+  max-height: 100vh;
+  opacity: 1;
+}
+
 .card.mapping-group.row form {
   flex-direction: row;
   align-items: flex-start;
