AMEN field mapping layout and scripting
Setup mostly complete for one entity: Patient; maybe add element preview to functions and html output?

--- a/style/master.css
+++ b/style/master.css
@@ -387,7 +387,8 @@ fieldset.checkbox {
   }
 }
 label,
-legend {
+legend,
+.label {
   overflow: hidden;
   padding: 0 0 var(--spacing--8);
   font-size: var(--small);
