--- a/projects/amen/style/_scss/_mapping.scss
+++ b/projects/amen/style/_scss/_mapping.scss
@@ -146,175 +146,60 @@
 }
 
 
-// CARD MAPPING GROUP - ROWS
-.card.mapping-group.row {
-  form {
+// FIELD MAPPING GROUP
+form.mapping-groups {
+  .mapping-group {
+    display: flex;
     flex-direction: row;
-    align-items: flex-start;
+    flex-wrap: wrap;
+    width: 100%;
 
-    .group {
+    fieldset.toggle {
+      margin-bottom: 0;
+    }
+
+    .preview {
       display: flex;
-      flex-direction: row;
-      flex-wrap: wrap;
-      justify-content: space-between;
-      position: relative;
-      width: 100%;
-      margin: 0 $spacing-8;
-      padding: 0 0 $spacing-32;
+      flex-direction: column;
+      width: calc((100% / 2) - $spacing-16);
+      margin: $spacing-8;
 
-      &:after {
-        display: block;
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        width: 100%;
-        height: 1px;
-        margin-bottom: $spacing-16;
-        background-color: $color--border;
-        content: "";
-      }
-
-      &:last-of-type {
+      p {
         padding: 0;
-
-        &:after {
-          display: none;
-        }
-      }
-
-      fieldset {
-        width: 100%;
-        margin: $spacing-8 0;
-
-        &.small {
-          width: calc(50% - $spacing-16);
-        }
-      }
-
-      fieldset+fieldset {
-        margin-top: 0;
-      }
-
-      fieldset.small+fieldset.small {
-        &:before {
-          display: block;
-          position: absolute;
-          top: 50%;
-          left: calc($spacing-24 * (-1));
-          width: $spacing-16;
-          height: $spacing-16;
-          background-image: url(../assets/icons/ui/plus-mapping.svg);
-          background-size: contain;
-          content: "";
-        }
+        line-height: 3rem;
       }
     }
   }
 }
 
 @media (min-width: 40rem) {
-  .card.mapping-group.row {
-    form {
-      .group {
-        width: calc((100% / 2) - $spacing-16);
+  form.mapping-groups {
+    .mapping-group {
+      width: calc(100% / 2);
+    }
+  }
+}
 
-        &:last-of-type {
-          padding: 0 0 $spacing-32;
-          ;
-
-          &:after {
-            display: block;
-          }
-        }
-      }
+@media (min-width: 64rem) {
+  form.mapping-groups {
+    .mapping-group {
+      width: calc(100% / 3);
     }
   }
 }
 
 @media (min-width: 80rem) {
-  .card.mapping-group.row {
-    form {
-      .group {
-        width: calc((100% / 3) - $spacing-16);
-      }
+  form.mapping-groups {
+    .mapping-group {
+      width: calc(100% / 4);
     }
   }
 }
 
-@media (min-width: 90rem) {
-  .card.mapping-group.row {
-    form {
-      .group {
-        width: calc((100% / 4) - $spacing-16);
-      }
-    }
-  }
-}
-
-// CARD MAPPING GROUPS - COLUMNS
-.card.mapping-group.column {
-
-  form {
-    flex-direction: column;
-    width: 100%;
-    margin: 0;
-
-    .group {
-      display: flex;
-      flex-direction: row;
-      flex-wrap: wrap;
-      justify-content: space-between;
-      position: relative;
-      width: 100%;
-      margin: 0;
-      padding: 0 0 $spacing-32;
-
-      &:after {
-        display: block;
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        width: 100%;
-        height: 1px;
-        margin-bottom: $spacing-16;
-        background-color: $color--border;
-        content: "";
-      }
-
-      &:last-of-type {
-        padding: 0;
-
-        &:after {
-          display: none;
-        }
-      }
-
-      fieldset {
-        width: 100%;
-        margin: $spacing-8 0;
-
-        &.small {
-          width: calc(50% - $spacing-16);
-        }
-      }
-
-      fieldset+fieldset {
-        margin-top: 0;
-      }
-
-      fieldset.small+fieldset.small {
-        &:before {
-          display: block;
-          position: absolute;
-          top: 50%;
-          left: calc($spacing-24 * (-1));
-          width: $spacing-16;
-          height: $spacing-16;
-          background-image: url(../assets/icons/ui/plus-mapping.svg);
-          background-size: contain;
-          content: "";
-        }
-      }
+@media (min-width: 96rem) {
+  form.mapping-groups {
+    .mapping-group {
+      width: calc(100% / 5);
     }
   }
 }
