--- a/projects/amen/style/amen.css
+++ b/projects/amen/style/amen.css
@@ -387,7 +387,8 @@ fieldset.checkbox {
   }
 }
 label,
-legend {
+legend,
+.label {
   overflow: hidden;
   padding: 0 0 var(--spacing--8);
   font-size: var(--small);
@@ -1968,134 +1969,46 @@ h4 span.utility .button.tertiary {
   opacity: 1;
 }
 
-.card.mapping-group.row form {
-  flex-direction: row;
-  align-items: flex-start;
-}
-.card.mapping-group.row form .group {
+form.mapping-groups .mapping-group {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-between;
-  position: relative;
   width: 100%;
-  margin: 0 var(--spacing--8);
-  padding: 0 0 var(--spacing--32);
 }
-.card.mapping-group.row form .group:after {
-  display: block;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 1px;
-  margin-bottom: var(--spacing--16);
-  background-color: var(--color--border);
-  content: "";
+form.mapping-groups .mapping-group fieldset.toggle {
+  margin-bottom: 0;
 }
-.card.mapping-group.row form .group:last-of-type {
-  padding: 0;
-}
-.card.mapping-group.row form .group:last-of-type:after {
-  display: none;
-}
-.card.mapping-group.row form .group fieldset {
-  width: 100%;
-  margin: var(--spacing--8) 0;
-}
-.card.mapping-group.row form .group fieldset.small {
+form.mapping-groups .mapping-group .preview {
+  display: flex;
+  flex-direction: column;
   width: calc(50% - var(--spacing--16));
+  margin: var(--spacing--8);
 }
-.card.mapping-group.row form .group fieldset + fieldset {
-  margin-top: 0;
-}
-.card.mapping-group.row form .group fieldset.small + fieldset.small:before {
-  display: block;
-  position: absolute;
-  top: 50%;
-  left: calc(var(--spacing--24) * -1);
-  width: var(--spacing--16);
-  height: var(--spacing--16);
-  background-image: url(../assets/icons/ui/plus-mapping.svg);
-  background-size: contain;
-  content: "";
+form.mapping-groups .mapping-group .preview p {
+  padding: 0;
+  line-height: 3rem;
 }
 
 @media (min-width: 40rem) {
-  .card.mapping-group.row form .group {
-    width: calc(50% - var(--spacing--16));
+  form.mapping-groups .mapping-group {
+    width: 50%;
   }
-  .card.mapping-group.row form .group:last-of-type {
-    padding: 0 0 var(--spacing--32);
-  }
-  .card.mapping-group.row form .group:last-of-type:after {
-    display: block;
+}
+@media (min-width: 64rem) {
+  form.mapping-groups .mapping-group {
+    width: 33.3333333333%;
   }
 }
 @media (min-width: 80rem) {
-  .card.mapping-group.row form .group {
-    width: calc(33.3333333333% - var(--spacing--16));
+  form.mapping-groups .mapping-group {
+    width: 25%;
   }
 }
-@media (min-width: 90rem) {
-  .card.mapping-group.row form .group {
-    width: calc(25% - var(--spacing--16));
+@media (min-width: 96rem) {
+  form.mapping-groups .mapping-group {
+    width: 20%;
   }
 }
-.card.mapping-group.column form {
-  flex-direction: column;
-  width: 100%;
-  margin: 0;
-}
-.card.mapping-group.column form .group {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  position: relative;
-  width: 100%;
-  margin: 0;
-  padding: 0 0 var(--spacing--32);
-}
-.card.mapping-group.column form .group:after {
-  display: block;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 1px;
-  margin-bottom: var(--spacing--16);
-  background-color: var(--color--border);
-  content: "";
-}
-.card.mapping-group.column form .group:last-of-type {
-  padding: 0;
-}
-.card.mapping-group.column form .group:last-of-type:after {
-  display: none;
-}
-.card.mapping-group.column form .group fieldset {
-  width: 100%;
-  margin: var(--spacing--8) 0;
-}
-.card.mapping-group.column form .group fieldset.small {
-  width: calc(50% - var(--spacing--16));
-}
-.card.mapping-group.column form .group fieldset + fieldset {
-  margin-top: 0;
-}
-.card.mapping-group.column form .group fieldset.small + fieldset.small:before {
-  display: block;
-  position: absolute;
-  top: 50%;
-  left: calc(var(--spacing--24) * -1);
-  width: var(--spacing--16);
-  height: var(--spacing--16);
-  background-image: url(../assets/icons/ui/plus-mapping.svg);
-  background-size: contain;
-  content: "";
-}
-
 code {
   font-size: var(--p);
 }
