--- a/style/_scss/_inputs.scss
+++ b/style/_scss/_inputs.scss
@@ -102,7 +102,8 @@ fieldset {
 
 // LABELS AND LEGENDS
 label,
-legend {
+legend,
+.label {
   overflow: hidden;
   padding: 0 0 $spacing-8;
   font-size: $small;
