AMEN mapping preview
Working on hooking up preview opacity to localStorage values

--- a/projects/amen/style/_scss/_mapping.scss
+++ b/projects/amen/style/_scss/_mapping.scss
@@ -163,11 +163,17 @@ form.mapping-groups {
       flex-direction: column;
       width: calc((100% / 2) - $spacing-16);
       margin: $spacing-8;
+      opacity: 1;
+      @include transition(opacity);
 
       p {
         padding: 0;
         line-height: 3rem;
       }
+    }
+
+    .preview.dim {
+      opacity: 0.5;
     }
   }
 }
