--- a/projects/amen/views/mapping/index.html
+++ b/projects/amen/views/mapping/index.html
@@ -59,22 +59,22 @@
               </li>
               <li id="yale-medical-center-patient-patient-id-field"><span class="field">Patient ID</span><span class="element"><code>PID.2</code></span><span class="preview">E00000329</span></li>
               <li id="yale-medical-center-patient-mrn-field"><span class="field">MRN</span><span class="element"><code>PID.3</code></span><span class="preview">M000000350</span></li>
-              <li id="yale-medical-center-patient-encounter-visit-number-field"><span class="field">Encounter Visit number</span><span class="element"><code>PID</code></span><span class="preview"></span></li>
+              <li id="yale-medical-center-patient-encounter-visit-number-field"><span class="field">Encounter Visit number</span><span class="element"><code></code></span><span class="preview"></span></li>
               <li id="yale-medical-center-patient-first-name-field"><span class="field">First Name</span><span class="element"><code>PID.5.3</code></span><span class="preview">TOM</span></li>
-              <li id="yale-medical-center-patient-last-name-field"><span class="field">Last Name</span><span class="element"><code>PID.5.2</code></span><span class="preview">BLUEAPPLE</span></li>
-              <li id="yale-medical-center-patient-organization-field"><span class="field">Organization</span><span class="element"><code>PID.5.1</code></span><span class="preview"></span></li>
-              <li id="yale-medical-center-patient-date-of-birth-field"><span class="field">Date of Birth</span><span class="element"><code>PID.7</code></span><span class="preview"></span></li>
-              <li id="yale-medical-center-patient-gender-field"><span class="field">Gender</span><span class="element"><code>PID.8</code></span><span class="preview"></span></li>
-              <li id="yale-medical-center-patient-phone-number-field"><span class="field">Phone Number</span><span class="element"><code>PID.13</code></span><span class="preview"></span></li>
-              <li id="yale-medical-center-patient-email-field"><span class="field">Email</span><span class="element"><code>PID</code></span><span class="preview"></span></li>
+              <li id="yale-medical-center-patient-last-name-field"><span class="field">Last Name</span><span class="element"><code>PID.5.2</code></span><span class="preview">BLUEBERRY</span></li>
+              <li id="yale-medical-center-patient-organization-field"><span class="field">Organization</span><span class="element"><code></code></span><span class="preview"></span></li>
+              <li id="yale-medical-center-patient-date-of-birth-field"><span class="field">Date of Birth</span><span class="element"><code>PID.7</code></span><span class="preview">19711221</span></li>
+              <li id="yale-medical-center-patient-gender-field"><span class="field">Gender</span><span class="element"><code>PID.8</code></span><span class="preview">M</span></li>
+              <li id="yale-medical-center-patient-phone-number-field"><span class="field">Phone Number</span><span class="element"><code></code></span><span class="preview"></span></li>
+              <li id="yale-medical-center-patient-email-field"><span class="field">Email</span><span class="element"><code></code></span><span class="preview"></span></li>
               <li id="yale-medical-center-patient-status-field"><span class="field">Status</span><span class="element"><code></code></span><span class="preview"></span></li>
               <li id="yale-medical-center-patient-chief-complaint-field"><span class="field">Chief Complaint</span><span class="element"><code></code></span><span class="preview"></span></li>
               <li id="yale-medical-center-patient-diagnosis-field"><span class="field">Diagnosis</span><span class="element"><code></code></span><span class="preview"></span></li>
               <li id="yale-medical-center-patient-allergies-field"><span class="field">Allergies</span><span class="element"><code></code></span><span class="preview"></span></li>
-              <li id="yale-medical-center-patient-patient-class-field"><span class="field">Patient Class</span><span class="element"><code>PV[1].4</code></span><span class="preview"></span></li>
-              <li id="yale-medical-center-patient-attending-physician-field"><span class="field">Attending Physician</span><span class="element"><code>PV[1].7</code></span><span class="preview"></span></li>
+              <li id="yale-medical-center-patient-patient-class-field"><span class="field">Patient Class</span><span class="element"><code>PV[1].4</code></span><span class="preview">EL</span></li>
+              <li id="yale-medical-center-patient-attending-physician-field"><span class="field">Attending Physician</span><span class="element"><code>PV[1].7</code></span><span class="preview">Fingergut Judy</span></li>
               <li id="yale-medical-center-patient-primary-care-physician-field"><span class="field">Primary Care Physician</span><span class="element"><code></code></span><span class="preview"></span></li>
-              <li id="yale-medical-center-patient-referring-physician-field"><span class="field">Referring Physician</span><span class="element"><code>PV[1].8</code></span><span class="preview"></span></li>
+              <li id="yale-medical-center-patient-referring-physician-field"><span class="field">Referring Physician</span><span class="element"><code></code></span><span class="preview"></span></li>
             </ul>
           </div>
           <div id="yale-medical-center-provider-entity" class="card entity column-12">
