AMEN updated Save buttons with back function

--- a/projects/amen/views/mapping/patient/index.html
+++ b/projects/amen/views/mapping/patient/index.html
@@ -69,7 +69,7 @@
             <div class="button-group right">
               <a href="views/mapping/index.html" class="button tertiary">Back to Mapping</a>
               <button class="secondary">Cancel</button>
-              <a href="views/mapping/index.html" class="button primary">Save</a>
+              <a href="javascript:window.history.back();" class="button primary">Save</a>
             </div>
           </div>
         </div>
