AMEN added location and lab result scripts

--- a/projects/amen/views/mapping/index.html
+++ b/projects/amen/views/mapping/index.html
@@ -105,6 +105,14 @@
                 <span class="element">Element</span>
                 <span class="preview">Preview</span>
               </li>
+              <li id="yale-medical-center-location-location-id-field"><span class="field">Location ID</span><span class="element"><code></code></span><span class="preview"></span></li>
+              <li id="yale-medical-center-location-type-field"><span class="field">Type</span><span class="element"><code></code></span><span class="preview"></span></li>
+              <li id="yale-medical-center-location-logical-grouping-field"><span class="field">Logical grouping</span><span class="element"><code></code></span><span class="preview"></span></li>
+              <li id="yale-medical-center-location-parent-location-field"><span class="field">Parent Location</span><span class="element"><code></code></span><span class="preview"></span></li>
+              <li id="yale-medical-center-location-location-unit-field"><span class="field">Location Unit</span><span class="element"><code>PV[1].3.1</code></span><span class="preview">ICU</span></li>
+              <li id="yale-medical-center-location-location-room-field"><span class="field">Location Room</span><span class="element"><code>PV[1].3.2</code></span><span class="preview">101</span></li>
+              <li id="yale-medical-center-location-location-bed-field"><span class="field">Location Bed</span><span class="element"><code>PV[1].3.3</code></span><span class="preview">A</span></li>
+              <li id="yale-medical-center-location-description-field"><span class="field">Description</span><span class="element"><code>PV[1].3.1.2.3</code></span><span class="preview">ICU 101 A</span></li>
             </ul>
           </div>
           <div id="yale-medical-center-caregiver-assignment-entity" class="card entity column-12">
@@ -145,6 +153,23 @@
                 <span class="element">Element</span>
                 <span class="preview">Preview</span>
               </li>
+              <li id="yale-medical-center-lab-result-result-id-field"><span class="field">Result ID</span><span class="element"><code></code></span><span class="preview"></span></li>
+              <li id="yale-medical-center-lab-result-observation-timestamp-field"><span class="field">Observation Timestamp</span><span class="element"><code></code></span><span class="preview"></span></li>
+              <li id="yale-medical-center-lab-result-observation-id-field"><span class="field">Observation ID</span><span class="element"><code></code></span><span class="preview"></span></li>
+              <li id="yale-medical-center-lab-result-observation-sub-id-field"><span class="field">Observation Sub ID</span><span class="element"><code></code></span><span class="preview"></span></li>
+              <li id="yale-medical-center-lab-result-observation-request-id-field"><span class="field">Observation Request ID</span><span class="element"><code></code></span><span class="preview"></span></li>
+              <li id="yale-medical-center-lab-result-specimen-id-field"><span class="field">Specimen ID</span><span class="element"><code></code></span><span class="preview"></span></li>
+              <li id="yale-medical-center-lab-result-observation-result-status-field"><span class="field">Observation Result Status</span><span class="element"><code></code></span><span class="preview"></span></li>
+              <li id="yale-medical-center-lab-result-observation-value-field"><span class="field">Observation Value</span><span class="element"><code>OBX[1].5</code></span><span class="preview">12.0</span></li>
+              <li id="yale-medical-center-lab-result-references-range-field"><span class="field">References Range</span><span class="element"><code>OBX[1].7</code></span><span class="preview">9.6-11.2</span></li>
+              <li id="yale-medical-center-lab-result-units-field"><span class="field">Units</span><span class="element"><code>OBX[1].6</code></span><span class="preview">SECONDS</span></li>
+              <li id="yale-medical-center-lab-result-value-type-field"><span class="field">Value Type</span><span class="element"><code>OBX[1].3.2</code></span><span class="preview">HEPARIN</span></li>
+              <li id="yale-medical-center-lab-result-priority-field"><span class="field">Priority</span><span class="element"><code></code></span><span class="preview"></span></li>
+              <li id="yale-medical-center-lab-result-resulted-test-field"><span class="field">Resulted Test</span><span class="element"><code></code></span><span class="preview"></span></li>
+              <li id="yale-medical-center-lab-result-result-field"><span class="field">Result</span><span class="element"><code></code></span><span class="preview"></span></li>
+              <li id="yale-medical-center-lab-result-ordering-provider-id-field"><span class="field">Ordering Provider ID</span><span class="element"><code></code></span><span class="preview"></span></li>
+              <li id="yale-medical-center-lab-result-patient-id-field"><span class="field">Patient ID</span><span class="element"><code>PID.2</code></span><span class="preview">E00000329</span></li>
+              <li id="yale-medical-center-lab-result-location-id-field"><span class="field">Location ID</span><span class="element"><code></code></span><span class="preview"></span></li>
             </ul>
           </div>
           <div id="yale-medical-center-nurse-call-entity" class="card entity column-12">
