--- a/projects/amen/views/mapping/location/index.html
+++ b/projects/amen/views/mapping/location/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1,minimum-scale=1">
-  <title>AMEN Lab Results Mapping Skunk Works | TigerConnect</title>
+  <title>AMEN Location Mapping Skunk Works | TigerConnect</title>
   <base href="../../../">
   <!-- css -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
@@ -41,173 +41,21 @@
   </header>
   <main>
     <article>
-      <h1>Yale Medical Center INT-1 Location</h1>
+      <h1>Yale Medical Center INT-1 Patient</h1>
       <section>
         <h2>Edit Active Fields</h2>
         <div class="row cards">
-          <div class="card mapping-group row">
-            <h3 class="visuallyhidden">Control Fields</h3>
-            <form id="yale-medical-center-location">
-              <div class="group">
-                <fieldset class="toggle checklist">
-                  <label for='yale-medical-center-location-location-id'>Location ID<input type='checkbox' id='yale-medical-center-location-location-id' class='toggle' name='yale-medical-center-location-location-id' title='Location ID' value='Location ID'></label>
-                </fieldset>
-                <fieldset>
-                  <label for="yale-medical-center-location-location-id-select">Location ID Element</label>
-                  <select id="yale-medical-center-location-location-id-select" name="yale-medical-center-location-location-id-select" disabled>
-                    <option label='Select an element' value='Select an element'></option>
-                    <option label='PV-1-Set ID' value='PV-1-Set ID' selected></option>
-                    <option label='PV-2-Patient Class' value='PV-2-Patient Class'></option>
-                    <option label='PV-3-Assigned Patient Location' value='PV-3-Assigned Patient Location'></option>
-                    <option label='PV-4-Admission Type' value='PV-4-Admission Type'></option>
-                    <option label='PV-5-Preadmit Number' value='PV-5-Preadmit Number'></option>
-                    <option label='PV-6-Prior Patient Location' value='PV-6-Prior Patient Location'></option>
-                    <option label='PV-7-Attending Doctor' value='PV-7-Attending Doctor'></option>
-                    <option label='PV-8-Referring Doctor' value='PV-8-Referring Doctor'></option>
-                    <option label='PV-9-Consulting Doctor' value='PV-9-Consulting Doctor'></option>
-                    <option label='PV-10-Hospital Service' value='PV-10-Hospital Service'></option>
-                    <option label='PV-11-Temporary Location' value='PV-11-Temporary Location'></option>
-                    <option label='PV-12-Preadmit Test Indicator' value='PV-12-Preadmit Test Indicator'></option>
-                    <option label='PV-13-Re-admission Indicator' value='PV-13-Re-admission Indicator'></option>
-                    <option label='PV-14-Admit Source' value='PV-14-Admit Source'></option>
-                    <option label='PV-15-Ambulatory Status' value='PV-15-Ambulatory Status'></option>
-                    <option label='PV-16-VIP Indicator' value='PV-16-VIP Indicator'></option>
-                    <option label='PV-17- Admitting Doctor' value='PV-17- Admitting Doctor'></option>
-                    <option label='PV-18-Patient Type' value='PV-18-Patient Type'></option>
-                    <option label='PV-19-Visit Number' value='PV-19-Visit Number'></option>
-                  </select>
-                  <span class="select-icon">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                      stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                      class="icon icon-tabler icons-tabler-outline icon-tabler-chevron-down">
-                      <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                      <path d="M6 9l6 6l6 -6"></path>
-                    </svg>
-                  </span>
-                </fieldset>
-              </div>
-              <div class="group">
-                <fieldset class="toggle checklist">
-                  <label for='yale-medical-center-location-type'>Type<input type='checkbox' id='yale-medical-center-location-type' class='toggle' name='yale-medical-center-location-type' title='Type' value='Type'></label>
-                </fieldset>
-                <fieldset>
-                  <label for="yale-medical-center-location-type-select">Location Type Element</label>
-                  <select id="yale-medical-center-location-type-select" name="yale-medical-center-location-type-select" disabled>
-                    <option label='Select an element' value='Select an element'></option>
-                    <option label="Facility" value="Facility"></option>
-                    <option label="Building" value="Building"></option>
-                    <option label="Floor" value="Floor"></option>
-                    <option label="Room" value="Room"></option>
-                    <option label="Bed" value="Bed"></option>
-                  </select>
-                  <span class="select-icon">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-chevron-down">
-                      <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                      <path d="M6 9l6 6l6 -6"></path>
-                    </svg>
-                  </span>
-                </fieldset>
-              </div>
-              <div class="group">
-                <fieldset class="toggle checklist">
-                  <label for='yale-medical-center-location-logical-grouping'>Logical Grouping<input type='checkbox' id='yale-medical-center-location-logical-grouping' class='toggle' name='yale-medical-center-location-logical-grouping' title='Logical Grouping' value='Logical Grouping'></label>
-                </fieldset>
-                <fieldset>
-                  <label for="yale-medical-center-location-logical-grouping-select">Logical Grouping Element</label>
-                  <select id="yale-medical-center-location-logical-grouping-select" name="yale-medical-center-location-logical-grouping-select" disabled>
-                    <option label='Select an element' value='Select an element'></option>
-                    <option label="Department" value="Department"></option>
-                    <option label="Unit" value="Unit"></option>
-                    <option label="POD" value="POD"></option>
-                  </select>
-                  <span class="select-icon">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-chevron-down">
-                      <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                      <path d="M6 9l6 6l6 -6"></path>
-                    </svg>
-                  </span>
-                </fieldset>
-              </div>
-              <div class="group">
-                <fieldset class="toggle checklist">
-                  <label for='yale-medical-center-location-parent-location'>Parent Location<input type='checkbox' id='yale-medical-center-location-parent-location' class='toggle' name='yale-medical-center-location-parent-location' title='Parent Location' value='Parent Location'></label>
-                </fieldset>
-                <fieldset>
-                  <label for="yale-medical-center-location-parent-location-select">Parent Location Element</label>
-                  <select id="yale-medical-center-location-parent-location-select" name="yale-medical-center-location-parent-location-select" disabled>
-                    <option label='Select an element' value='Select an element'></option>
-                    <option label='PV-1-Set ID' value='PV-1-Set ID'></option>
-                    <option label='PV-2-Patient Class' value='PV-2-Patient Class'></option>
-                    <option label='PV-3-Assigned Patient Location' value='PV-3-Assigned Patient Location'></option>
-                    <option label='PV-4-Admission Type' value='PV-4-Admission Type'></option>
-                    <option label='PV-5-Preadmit Number' value='PV-5-Preadmit Number'></option>
-                    <option label='PV-6-Prior Patient Location' value='PV-6-Prior Patient Location'></option>
-                    <option label='PV-7-Attending Doctor' value='PV-7-Attending Doctor'></option>
-                    <option label='PV-8-Referring Doctor' value='PV-8-Referring Doctor'></option>
-                    <option label='PV-9-Consulting Doctor' value='PV-9-Consulting Doctor'></option>
-                    <option label='PV-10-Hospital Service' value='PV-10-Hospital Service'></option>
-                    <option label='PV-11-Temporary Location' value='PV-11-Temporary Location'></option>
-                    <option label='PV-12-Preadmit Test Indicator' value='PV-12-Preadmit Test Indicator'></option>
-                    <option label='PV-13-Re-admission Indicator' value='PV-13-Re-admission Indicator'></option>
-                    <option label='PV-14-Admit Source' value='PV-14-Admit Source'></option>
-                    <option label='PV-15-Ambulatory Status' value='PV-15-Ambulatory Status'></option>
-                    <option label='PV-16-VIP Indicator' value='PV-16-VIP Indicator'></option>
-                    <option label='PV-17- Admitting Doctor' value='PV-17- Admitting Doctor'></option>
-                    <option label='PV-18-Patient Type' value='PV-18-Patient Type'></option>
-                    <option label='PV-19-Visit Number' value='PV-19-Visit Number'></option>
-                  </select>
-                  <span class="select-icon">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                      stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                      class="icon icon-tabler icons-tabler-outline icon-tabler-chevron-down">
-                      <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                      <path d="M6 9l6 6l6 -6"></path>
-                    </svg>
-                  </span>
-                </fieldset>
-              </div>
-              <div class="group">
-                <fieldset class="toggle checklist">
-                  <label for='yale-medical-center-location-description'>Description<input type='checkbox' id='yale-medical-center-location-description' class='toggle' name='yale-medical-center-location-description' title='Description' value='Description' checked></label>
-                </fieldset>
-                <fieldset>
-                  <label for="yale-medical-center-location-description-select">Description Element</label>
-                  <select id="yale-medical-center-location-description-select" name="yale-medical-center-location-description-select">
-                    <option label='PV-1-Set ID' value='PV-1-Set ID'></option>
-                    <option label='PV-2-Patient Class' value='PV-2-Patient Class'></option>
-                    <option label='PV-3-Assigned Patient Location' value='PV-3-Assigned Patient Location' selected></option>
-                    <option label='PV-4-Admission Type' value='PV-4-Admission Type'></option>
-                    <option label='PV-5-Preadmit Number' value='PV-5-Preadmit Number'></option>
-                    <option label='PV-6-Prior Patient Location' value='PV-6-Prior Patient Location'></option>
-                    <option label='PV-7-Attending Doctor' value='PV-7-Attending Doctor'></option>
-                    <option label='PV-8-Referring Doctor' value='PV-8-Referring Doctor'></option>
-                    <option label='PV-9-Consulting Doctor' value='PV-9-Consulting Doctor'></option>
-                    <option label='PV-10-Hospital Service' value='PV-10-Hospital Service'></option>
-                    <option label='PV-11-Temporary Location' value='PV-11-Temporary Location'></option>
-                    <option label='PV-12-Preadmit Test Indicator' value='PV-12-Preadmit Test Indicator'></option>
-                    <option label='PV-13-Re-admission Indicator' value='PV-13-Re-admission Indicator'></option>
-                    <option label='PV-14-Admit Source' value='PV-14-Admit Source'></option>
-                    <option label='PV-15-Ambulatory Status' value='PV-15-Ambulatory Status'></option>
-                    <option label='PV-16-VIP Indicator' value='PV-16-VIP Indicator'></option>
-                    <option label='PV-17- Admitting Doctor' value='PV-17- Admitting Doctor'></option>
-                    <option label='PV-18-Patient Type' value='PV-18-Patient Type'></option>
-                    <option label='PV-19-Visit Number' value='PV-19-Visit Number'></option>
-                  </select>
-                  <span class="select-icon">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                      stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                      class="icon icon-tabler icons-tabler-outline icon-tabler-chevron-down">
-                      <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                      <path d="M6 9l6 6l6 -6"></path>
-                    </svg>
-                  </span>
-                </fieldset>
-              </div>
+          <div class="card" style="width: 100%;">
+            <form class="mapping-groups">
+              <div class="mapping-group"><fieldset class="toggle"><label for="yale-medical-center-location-location-unit-field">Location Unit<input type="checkbox" id="yale-medical-center-location-location-unit-field" class="toggle" name="yale-medical-center-location-location-unit-field" title="Location Unit" value="Location Unit"></label></fieldset><fieldset class="small"><label for="yale-medical-center-location-location-unit-field">Location Unit element</label><input type="text" id="yale-medical-center-location-location-unit-field-element" name="yale-medical-center-location-location-unit-field" value="PV[1].3.1"></fieldset><div id="yale-medical-center-location-location-unit-field-preview" class="preview"><span class="label">Preview</span><p>ICU</p></div></div>
+              <div class="mapping-group"><fieldset class="toggle"><label for="yale-medical-center-location-location-room-field">Location Room<input type="checkbox" id="yale-medical-center-location-location-room-field" class="toggle" name="yale-medical-center-location-location-room-field" title="Location Room" value="Location Room"></label></fieldset><fieldset class="small"><label for="yale-medical-center-location-location-room-field">Location Room element</label><input type="text" id="yale-medical-center-location-location-room-field-element" name="yale-medical-center-location-location-room-field" value="PV[1].3.2"></fieldset><div id="yale-medical-center-location-location-room-field-preview" class="preview"><span class="label">Preview</span><p>101</p></div></div>
+              <div class="mapping-group"><fieldset class="toggle"><label for="yale-medical-center-location-location-bed-field">Location Bed<input type="checkbox" id="yale-medical-center-location-location-bed-field" class="toggle" name="yale-medical-center-location-location-bed-field" title="Location Bed" value="Location Bed"></label></fieldset><fieldset class="small"><label for="yale-medical-center-location-location-bed-field">Location Bed element</label><input type="text" id="yale-medical-center-location-location-bed-field-element" name="yale-medical-center-location-location-bed-field" value="PV[1].3.3"></fieldset><div id="yale-medical-center-location-location-bed-field-preview" class="preview"><span class="label">Preview</span><p>A</p></div></div>
+              <div class="mapping-group"><fieldset class="toggle"><label for="yale-medical-center-location-description-field">Description<input type="checkbox" id="yale-medical-center-location-description-field" class="toggle" name="yale-medical-center-location-description-field" title="Description" value="Description"></label></fieldset><fieldset class="small"><label for="yale-medical-center-location-description-field">Description element</label><input type="text" id="yale-medical-center-location-description-field-element" name="yale-medical-center-location-description-field" value="PV[1].3.1.2.3"></fieldset><div id="yale-medical-center-location-description-field-preview" class="preview"><span class="label">Preview</span><p>ICU 101 A</p></div></div>
             </form>
             <div class="button-group right">
               <a href="views/mapping/index.html" class="button tertiary">Back to Mapping</a>
               <button class="secondary">Cancel</button>
-              <button class="primary">Save</button>
+              <a href="javascript:window.history.back();" class="button primary">Save</a>
             </div>
           </div>
         </div>
