AMEN provider script added

--- a/projects/amen/views/mapping/index.html
+++ b/projects/amen/views/mapping/index.html
@@ -85,6 +85,13 @@
                 <span class="element">Element</span>
                 <span class="preview">Preview</span>
               </li>
+              <li id="yale-medical-center-provider-provider-id-field"><span class="field">Provider ID</span><span class="element"><code>PV[1].1</code></span><span class="preview">1519</span></li>
+              <li id="yale-medical-center-provider-first-name-field"><span class="field">First Name</span><span class="element"><code>PV[1].7.3</code></span><span class="preview">Judy</span></li>
+              <li id="yale-medical-center-provider-middle-initial-field"><span class="field">Middle Initial</span><span class="element"><code></code></span><span class="preview"></span></li>
+              <li id="yale-medical-center-provider-last-name-field"><span class="field">Last Name</span><span class="element"><code>PV[1].7.2</code></span><span class="preview">Fingergut</span></li>
+              <li id="yale-medical-center-provider-credentials-field"><span class="field">Credentials</span><span class="element"><code>PV[1].7.4</code></span><span class="preview">MD</span></li>
+              <li id="yale-medical-center-provider-specialty-field"><span class="field">Specialty</span><span class="element"><code></code></span><span class="preview"></span></li>
+              <li id="yale-medical-center-provider-provider-group-field"><span class="field">Provider Group</span><span class="element"><code></code></span><span class="preview"></span></li>
             </ul>
           </div>
           <div id="yale-medical-center-caregiver-entity" class="card entity column-12">
