--- a/projects/amen/views/mapping/provider/index.html
+++ b/projects/amen/views/mapping/provider/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1,minimum-scale=1">
-  <title>AMEN Lab Results Mapping Skunk Works | TigerConnect</title>
+  <title>AMEN Provider Mapping Skunk Works | TigerConnect</title>
   <base href="../../../">
   <!-- css -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
@@ -41,50 +41,21 @@
   </header>
   <main>
     <article>
-      <h1>Yale Medical Center INT-1 Provider</h1>
+      <h1>Yale Medical Center INT-1 Patient</h1>
       <section>
         <h2>Edit Active Fields</h2>
         <div class="row cards">
-          <div class="card">
-            <h3>Control Fields</h3>
-            <!-- <div class="button-group right">
-              <button class="tertiary">All</button>
-              <button class="tertiary">None</button>
-            </div> -->
-            <form id="yale-medical-center-provider">
-              <fieldset class="toggle checklist">
-                <!-- <legend>Provider</legend> -->
-                <label for='yale-medical-center-provider-provider-id'>Provider ID<input type='checkbox'
-                    id='yale-medical-center-provider-provider-id' class='toggle'
-                    name='yale-medical-center-provider-provider-id' title='Provider ID' value='Provider ID'></label>
-                <label for='yale-medical-center-provider-first-name'>First Name<input type='checkbox'
-                    id='yale-medical-center-provider-first-name' class='toggle'
-                    name='yale-medical-center-provider-first-name' title='First Name' value='First Name'></label>
-                <label for='yale-medical-center-provider-middle-initial'>Middle Initial<input type='checkbox'
-                    id='yale-medical-center-provider-middle-initial' class='toggle'
-                    name='yale-medical-center-provider-middle-initial' title='Middle Initial'
-                    value='Middle Initial'></label>
-                <label for='yale-medical-center-provider-last-name'>Last Name<input type='checkbox'
-                    id='yale-medical-center-provider-last-name' class='toggle'
-                    name='yale-medical-center-provider-last-name' title='Last Name' value='Last Name'></label>
-                <label for='yale-medical-center-provider-credentials'>Credentials (MD, DO, etc.)<input type='checkbox'
-                    id='yale-medical-center-provider-credentials' class='toggle'
-                    name='yale-medical-center-provider-credentials' title='Credentials (MD, DO, etc.)'
-                    value='Credentials (MD, DO, etc.)'></label>
-                <label for='yale-medical-center-provider-specialty'>Specialty<input type='checkbox'
-                    id='yale-medical-center-provider-specialty' class='toggle'
-                    name='yale-medical-center-provider-specialty' title='Specialty' value='Specialty'></label>
-                <label for='yale-medical-center-provider-provider-group'>Provider Group (i.e. xyz Cardiology
-                  group)<input type='checkbox' id='yale-medical-center-provider-provider-group' class='toggle'
-                    name='yale-medical-center-provider-provider-group'
-                    title='Provider Group (i.e. xyz Cardiology group)'
-                    value='Provider Group (i.e. xyz Cardiology group)'></label>
-              </fieldset>
+          <div class="card" style="width: 100%;">
+            <form class="mapping-groups">
+              <div class="mapping-group"><fieldset class="toggle"><label for="yale-medical-center-provider-provider-id-field">Provider ID<input type="checkbox" id="yale-medical-center-provider-provider-id-field" class="toggle" name="yale-medical-center-provider-provider-id-field" title="Provider ID" value="Provider ID"></label></fieldset><fieldset class="small"><label for="yale-medical-center-provider-provider-id-field">Provider ID element</label><input type="text" id="yale-medical-center-provider-provider-id-field-element" name="yale-medical-center-provider-provider-id-field" value="PV[1].1"></fieldset><div id="yale-medical-center-provider-provider-id-field-preview" class="preview"><span class="label">Preview</span><p>1519</p></div></div>
+              <div class="mapping-group"><fieldset class="toggle"><label for="yale-medical-center-provider-first-name-field">First Name<input type="checkbox" id="yale-medical-center-provider-first-name-field" class="toggle" name="yale-medical-center-provider-first-name-field" title="First Name" value="First Name"></label></fieldset><fieldset class="small"><label for="yale-medical-center-provider-first-name-field">First Name element</label><input type="text" id="yale-medical-center-provider-first-name-field-element" name="yale-medical-center-provider-first-name-field" value="PV[1].7.3"></fieldset><div id="yale-medical-center-provider-first-name-field-preview" class="preview"><span class="label">Preview</span><p>Judy</p></div></div>
+              <div class="mapping-group"><fieldset class="toggle"><label for="yale-medical-center-provider-last-name-field">Last Name<input type="checkbox" id="yale-medical-center-provider-last-name-field" class="toggle" name="yale-medical-center-provider-last-name-field" title="Last Name" value="Last Name"></label></fieldset><fieldset class="small"><label for="yale-medical-center-provider-last-name-field">Last Name element</label><input type="text" id="yale-medical-center-provider-last-name-field-element" name="yale-medical-center-provider-last-name-field" value="PV[1].7.2"></fieldset><div id="yale-medical-center-provider-last-name-field-preview" class="preview"><span class="label">Preview</span><p>Fingergut</p></div></div>
+              <div class="mapping-group"><fieldset class="toggle"><label for="yale-medical-center-provider-credentials-field">Credentials<input type="checkbox" id="yale-medical-center-provider-credentials-field" class="toggle" name="yale-medical-center-provider-credentials-field" title="Credentials" value="Credentials"></label></fieldset><fieldset class="small"><label for="yale-medical-center-provider-credentials-field">Credentials element</label><input type="text" id="yale-medical-center-provider-credentials-field-element" name="yale-medical-center-provider-credentials-field" value="PV[1].7.4"></fieldset><div id="yale-medical-center-provider-credentials-field-preview" class="preview"><span class="label">Preview</span><p>MD</p></div></div>
             </form>
             <div class="button-group right">
               <a href="views/mapping/index.html" class="button tertiary">Back to Mapping</a>
               <button class="secondary">Cancel</button>
-              <button class="primary">Save</button>
+              <a href="javascript:window.history.back();" class="button primary">Save</a>
             </div>
           </div>
         </div>
